fix: change minor thematic issues (#65)
* fix: center search bar on home page

fix #60

* feat: re-arrange and distribute navbar right items

* feat: distinguish sidebar menu button on mobile

* fix: correct colors of sidebar and main menu on mobile

* fix: use dark scrollbars for dark theme

* fix: use the "plain text" syntax highlighter for source materials

this should be updated in the github flavored markdown documents from the original repo as well

* fix: resize header and title on home page

* feat: unset bg color for scrollbar track

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -89,6 +89,7 @@ html[data-theme='light'] {
   --ifm-toc-border-color: #f2f2f2;
   /* footer */
   --ifm-footer-background-color: #f6f3ef;
+  --ifm-background-surface-color: #f2f2f2;
 }
 
 html[data-theme='dark'] {
@@ -101,6 +102,7 @@ html[data-theme='dark'] {
   --ifm-color-info: var(--ifm-color-info-dark);
   --ifm-color-warning: var(--ifm-color-warning-dark);
   --ifm-color-danger: var(--ifm-color-danger-dark);
+  --ifm-background-surface-color: var(--ifm-color-gray-800);
 }
 
 strong,
@@ -231,6 +233,39 @@ html .navbar .DocSearch {
   --docsearch-searchbox-background: rgba(255, 255, 255, 0.15);
 }
 
+.navbar .DocSearch-Button {
+  padding: var(--ifm-navbar-item-padding-vertical)
+    var(--ifm-navbar-item-padding-horizontal);
+  margin: 0;
+}
+
+.navbar .DocSearch-Button-Placeholder,
+.navbar .DocSearch-Button-Keys {
+  display: none;
+}
+
+.navbar .DocSearch-Button,
+.navbar .DocSearch-Button:active,
+.navbar .DocSearch-Button:focus,
+.navbar .DocSearch-Button:hover {
+  background: inherit;
+  box-shadow: inherit;
+  color: var(--docsearch-text-color);
+  outline: none;
+}
+
+.navbar .DocSearch-Button:active path,
+.navbar .DocSearch-Button:focus path,
+.navbar .DocSearch-Button:hover path {
+  color: var(--ifm-navbar-link-hover-color);
+}
+
+.navbar__items--right .react-toggle {
+  order: -1;
+  margin: var(--ifm-navbar-item-padding-vertical)
+    var(--ifm-navbar-item-padding-horizontal);
+}
+
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
   display: block;
@@ -244,8 +279,8 @@ html .navbar .DocSearch {
 
 .header-github-link:before {
   content: '';
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   display: flex;
   filter: saturate(10%) brightness(200%);
   background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='dodgerblue' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
@@ -285,6 +320,11 @@ html[data-theme='dark'] .menu > ul > .menu__list-item {
   border-top: 1px solid #444444;
 }
 
+html[data-theme='light'] .navbar-sidebar .menu > ul > .menu__list-item,
+html[data-theme='dark'] .navbar-sidebar .menu > ul > .menu__list-item {
+  border-top: 1px solid #4f2a3b;
+}
+
 html[data-theme='light'] .menu > ul > .menu__list-item:first-child,
 html[data-theme='dark'] .menu > ul > .menu__list-item:first-child {
   border-top-width: 0px;
@@ -312,6 +352,7 @@ html[data-theme='dark'] .menu > ul > .menu__list-item:first-child {
   height: inherit;
   width: inherit;
   transform: rotate(45deg);
+  filter: none;
 }
 
 /*-----------------------------------------------------------------------------
@@ -380,7 +421,11 @@ ul.table-of-contents {
   background-color: var(--ifm-navbar-background-color);
   color: var(--ifm-navbar-link-color);
   background: radial-gradient(75vw 100% at 50% 115%, #ba1e62, #300519 100%);
-  padding: 8rem 0;
+  padding: 6rem 0;
+}
+
+.hero__title {
+  font-size: 3.5rem !important;
 }
 
 .home.container {
@@ -388,6 +433,7 @@ ul.table-of-contents {
 }
 
 .home.container .DocSearch-Button {
+  margin: 0;
   width: 100%;
 }
 
@@ -436,4 +482,48 @@ html[data-theme='dark'] .product_card:hover {
   width: 1rem;
   height: 1rem;
   fill: var(--ifm-color-primary);
+}
+
+/*-----------------------------------------------------------------------------
+  Mobile
+-----------------------------------------------------------------------------*/
+
+.button--secondary:not(.button--outline) {
+  color: var(--ifm-color-white);
+  --ifm-button-background-color: var(--ifm-navbar-link-hover-color);
+  --ifm-button-border-color: var(--ifm-navbar-link-hover-color);
+  padding: 1rem;
+  border-radius: 4rem;
+}
+
+.button--secondary[aria-label='Close Menu'] > span {
+  font-size: 0;
+}
+
+.button--secondary[aria-label='Close Menu'] > span::before {
+  content: '+';
+  rotate: 45deg;
+  font-weight: 100;
+  font-size: 2rem;
+  translate: 0.15rem -0.1rem;
+}
+
+/*-----------------------------------------------------------------------------
+  Scrollbars
+
+  For whatever reasons, these are not set correctly and use the light theme
+  scrollbar color unless these rules are specified. Can check later if it's
+  fixed upstream.
+-----------------------------------------------------------------------------*/
+
+html[data-theme='dark'] body {
+  background: var(--ifm-background-color);
+}
+
+html[data-theme='dark'] .prism-code {
+  background: var(--ifm-color-gray-800);
+}
+
+html[data-theme='dark'] .thin-scrollbar::-webkit-scrollbar-track {
+  background-color: unset;
 }
